--- a/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
+++ b/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
@@ -46,6 +46,7 @@
                     <li><a href="/SuperUser/ManageDepartment">Departments</a></li>
                     <li><a href="/SuperUser/ManageBatch">Batches</a></li>
                     <li><a href="/SuperUser/ManageSubject">Subjects</a></li>
+                    <li><a href="/SuperUser/ManageRoom">Rooms</a></li>
                     <li><a href="#">Exam Result</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
