--- a/FYP/FYP/Views/SuperUser/AddTeacher.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddTeacher.cshtml
@@ -77,7 +77,10 @@
             rules: {
                 First_Name: "required",
                 Last_Name: "required",
-                Password: "required",
+                Password: {
+                    required: true,
+                    //minlength: 8,
+                },
                 Department_Id: "required",
                 Contact_No: {
                     required: true,
@@ -99,7 +102,10 @@
             messages: {
                 First_Name: "Please enter First Name !",
                 Last_Name: "Please enter Last Name !",
-                Password: "Please enter a Password !",
+                Password: {
+                    required: "Please enter password!",
+                    //minlength: "Minimum length for your password is 8!",
+                },
                 Department_Id: "Please select a Department !",
                 Contact_No: {
                     required: "Please enter a Contact Number !",
