--- a/FYP/FYP/Views/SuperUser/EditStudent.cshtml
+++ b/FYP/FYP/Views/SuperUser/EditStudent.cshtml
@@ -52,24 +52,30 @@
 
 <script>
     $(function () {
-
+        
         $("form").validate({
             rules: {
                 First_Name: "required",
                 Last_Name: "required",
-                Password: "required",
+                Password: {
+                    required: true,
+                    //minlength: 8,
+                },
                 Section: "required",
                 Contact_No: {
-                    required: "Please enter a Contact Number !",
-                    number: "It must be a number !",
-                    minlength: "There must be 11 digits in contact no. !",
-                    maxlength: "There must be 11 digits in contact no. !",
+                    required: true,
+                    number: true,
+                    minlength: 11,
+                    maxlength: 11,
                 },
             },
             messages: {
                 First_Name: "Please enter first name !",
                 Last_Name: "Please enter last name !",
-                Password: "Please enter password !",
+                Password: {
+                    required: "Please enter password!",
+                    //minlength: "Minimum length for your password is 8!",
+                },
                 Section: "Please select a section !",
                 Contact_No: {
                     required: "Please enter a Contact Number !",
@@ -82,8 +88,6 @@
                 form.submit();
             }
         });
-
-        $("form").valid();
 
         $(document).ready(function () {
             var sec = $("#Section").val();
