--- a/FYP/FYP/Views/SuperUser/ManageStudent.cshtml
+++ b/FYP/FYP/Views/SuperUser/ManageStudent.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 <body>
-    <div class="container" style="border: none; padding: 0px; border-radius: 4px;">
+    <div class="container" id="tablediv" style="border: none; padding: 0px; border-radius: 4px;">
         <h3><b>Manage Students</b></h3>
         <hr>
 
@@ -23,7 +23,7 @@
         <div class="container" style="border: 1px solid silver; padding: 0px; border-radius: 4px;">
             <div class="container-fluid" style="background-color: #F4F4F4; padding: 12px; border-radius: 4px;"><span class="glyphicon glyphicon-edit"></span> Students List</div>
             <br>
-            <div class="container table-responsive">
+            <div class="container table-responsive" id="tablediv">
                 <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
@@ -41,7 +41,7 @@
                         <tr id="tr_@s.User_Id">
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.User_Id</b></td>
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.First_Name @s.Last_Name</b></td>
-                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Department.Department_Id</b></td>
+                            <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Department_Id</b></td>
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Batch_Id</b></td>
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Section</b></td>
                             <td style="height: 40px; width: 600px; text-align: center; font-size: 13px;">&nbsp;&nbsp;<b>@s.Contact_No</b></td>
@@ -77,6 +77,7 @@
                 dataType: "json",
                 success: function (response) {
                     $("#tr_" + btnValue).remove();
+                    //$("#tablediv").load("/SuperUser/ManageStudent" + " #tablediv");
                 },
                 error: function (response) {
                     alert("error");
