--- a/FYP/FYP/Views/ExamController/ExamSchedule.cshtml
+++ b/FYP/FYP/Views/ExamController/ExamSchedule.cshtml
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+ 
     <title>CreateExam</title>
 
     <style>
@@ -37,14 +37,34 @@
                             <input type="text" name ="Exam_Id" value="@Model.Exam_Id" class="form-control" readonly/>
 
                             <label>Time From</label>
-                            <input type="datetime-local" name="Time_From" value="@Model.Time_From" class="form-control"/>
+                            @if (Model.Time_From != null)
+                            {
+                                <input type="datetime-local" id="Time_From" name="Time_From" value="@Model.Time_From.ToString("yyyy-MM-ddThh:mm:ss")" class="form-control" />
+                            }
+                            else
+                            {
+                                <input type="datetime-local" id="Time_From" name="Time_From" class="form-control" />
+                            }
 
                             <label>Time To</label>
-                            <input type="datetime-local" name="Time_To" value="@Model.Time_To" class="form-control" />
+                            @if (Model.Time_To != null)
+                            {
+                                <input type="datetime-local" id="Time_To" name="Time_To" value="@Model.Time_To.ToString("yyyy-MM-ddThh:mm:ss")" class="form-control" />
+                            }
+                            else
+                            {
+                                <input type="datetime-local" id="Time_To" name="Time_To" class="form-control" />
+                            }
 
                             <label>Room</label>
-                            <select id="room" name="Room_Id" class="form-control">
-                                <option value="@Model.Room_Id" selected>@Model.Room_Id</option>
+                            <select id="room" name="rooms" class="form-control" multiple>
+                                @foreach (var r in ViewBag.rooms)
+                                {
+                                    if (!string.IsNullOrEmpty(r))
+                                    {
+                                        <option value="@r" selected>Room Number: @r</option>
+                                    }
+                                }
                             </select><br>
 
                             <input type="submit" class="btn btn-primary submit-btn" value="Add" />
@@ -58,18 +78,20 @@
     </div>
 </body>
 </html>
+
 <script>
     $(function () {
 
+        //$("#Time_From, #Time_To").datetimepicker();
+
         $(document).ready(function () {
 
-            var roomId = $("#room").val();
-            //$("#room").multiselect({
-            //    includeSelectAllOption: true,
-            //    buttonWidth: '100%'
-            //});
-            //$(".caret").css('float', 'right');
-            //$(".caret").css('margin', '8px 0');
+            $("#room").multiselect({
+                includeSelectAllOption: true,
+                buttonWidth: '100%'
+            });
+            $(".caret").css('float', 'right');
+            $(".caret").css('margin', '8px 0');
 
             $.ajax({
                 type: "POST",
@@ -82,13 +104,13 @@
                         $("#room").html('<option disabled selected>-There are no Rooms in DB-</option>');
                     }
                     else {
-                        $("#room").html('<option disabled selected>-Select a Room-</option>');
                         for (var i = 0; i < len; i++) {
-                            if (roomId == response[i].Room_Id)
-                                $("#room").append(new Option("Room Number: " + response[i].Room_Id + ", Room Capacity: " + response[i].Room_Capacity, response[i].Room_Id, true , true));
-                            else
-                                $("#room").append(new Option("Room Number: " + response[i].Room_Id + ", Room Capacity: " + response[i].Room_Capacity, response[i].Room_Id));
+                            if ($("#room option[value='" + response[i].Room_Id + "']").length > 0) { }
+                            else {
+                                $("#room").append(new Option("Room Number: " + response[i].Room_Id, response[i].Room_Id));
+                            }
                         }
+                        $("#room").multiselect("rebuild");
                     }
                 },
                 error: function (response) {
