--- a/FYP/FYP/Views/Shared/ExamControllerLayout.cshtml
+++ b/FYP/FYP/Views/Shared/ExamControllerLayout.cshtml
@@ -6,9 +6,10 @@
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap-multiselect.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
+    <script src="~/Scripts/moment.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
     <script src="~/Scripts/bootstrap-multiselect.js"></script>
-
 </head>
 <body>
     <nav class="navbar navbar-inverse">
