--- a/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
+++ b/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i>Welcome @Html.Raw(HttpContext.Current.Session["User_Name"])</i><b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/Home/Index"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
+                            <li><a href="/Home/LogOut"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -62,4 +62,5 @@
     </nav>
     @RenderBody();
 </body>
-</html>
+</html
+@*@Url.Action("LogOut","Home", new {User_Id = Html.Raw(HttpContext.Current.Session["User_Id"])},null)*@
